complete display of directions

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyDnrHxhQ8T39Wy-l63kWgtreAiG1EjKanM"/>
+            android:value="@string/google_geo_api_key"/>
 
         <activity
             android:name=".MainActivity"
