--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,5 +31,5 @@ dependencies {
     implementation 'com.loopj.android:android-async-http:1.4.9'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation "com.google.android.gms:play-services-places:15.0.0"
-
+    implementation 'com.akexorcist:googledirectionlibrary:1.1.1'
 }
