--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,5 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation "com.google.android.gms:play-services-places:15.0.0"
     implementation 'com.akexorcist:googledirectionlibrary:1.1.1'
+    implementation 'com.google.code.gson:gson:2.8.2'
 }
